--- a/public/styles/site/views/_index.scss
+++ b/public/styles/site/views/_index.scss
@@ -1,3 +1,4 @@
+$break-xs: 440px;
 $break-small: 500px;
 $break-medium: 768px;
 
@@ -73,6 +74,10 @@ min-height: 100%;
    font-size: 20px;
   }
 
+  @media screen and (max-width: $break-xs) {
+    font-size: 14px;
+  }
+
 }
 
 // The big header on main page
@@ -93,6 +98,10 @@ min-height: 100%;
   // Style from small to medium 500px-768px
   @media screen and (max-width: $break-medium) {
     font-size: 60px;
+  }
+
+  @media screen and (max-width: $break-xs) {
+    font-size: 36px;
   }
 }
 
@@ -150,6 +159,11 @@ min-height: 100%;
   -ms-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+  @media screen and (max-width: break-xs) {
+    width: 200px;
+    font-size: 20px;
+  }
+
 }
 
 
